--- a/this全面解析/index.html
+++ b/this全面解析/index.html
@@ -7,6 +7,8 @@
     <title>this全面解析</title>
 </head>
 <body>
-    <script src="./类似js的bind实现.js"></script>
+    <!-- <script src="./类似js的bind实现.js"></script> -->
+    <!-- <script src="./隐式绑定.js"></script> -->
+    <script src="./显式绑定.js"></script>
 </body>
 </html>
