--- a/this全面解析/index.html
+++ b/this全面解析/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: 陈银 chenyin151@163.com
+ * @Date: 2022-11-13 23:17:35
+ * @LastEditors: 陈银 chenyin151@163.com
+ * @LastEditTime: 2022-11-13 23:19:50
+ * @FilePath: /youdontknowjs-test/this全面解析/index.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +17,7 @@
 <body>
     <!-- <script src="./类似js的bind实现.js"></script> -->
     <!-- <script src="./隐式绑定.js"></script> -->
-    <script src="./显式绑定.js"></script>
+    <!-- <script src="./显式绑定.js"></script> -->
+    <script src="./new绑定.js"></script>
 </body>
 </html>
