--- a/this全面解析/index.html
+++ b/this全面解析/index.html
@@ -18,6 +18,8 @@
     <!-- <script src="./类似js的bind实现.js"></script> -->
     <!-- <script src="./隐式绑定.js"></script> -->
     <!-- <script src="./显式绑定.js"></script> -->
-    <script src="./new绑定.js"></script>
+    <!-- <script src="./new绑定.js"></script> -->
+    <!-- <script src="./间接引用.js"></script> -->
+    <script src="./软绑定.js"></script>
 </body>
 </html>
